--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@babel/plugin-transform-runtime": "^7.10.4",
 		"@babel/preset-env": "^7.10.4",
 		"@babel/runtime": "^7.10.4",
+		"@rollup/plugin-alias": "^3.1.1",
 		"@rollup/plugin-babel": "^5.0.4",
 		"@rollup/plugin-commonjs": "^13.0.0",
 		"@rollup/plugin-node-resolve": "^8.1.0",
