Optimized Boilerplate Code

--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
 			"name": "Renaitare",
 			"email": "support@renai.me",
 			"url": "https://renai.me"
+		},
+		{
+			"name": "Mirac",
+			"email": "ozd.mirac@gmail.com",
+			"url": "https://madebymirac.com"
 		}
 	],
 	"scripts": {
