--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
 	},
 	"dependencies": {
 		"compression": "^1.7.4",
+		"node-fetch": "^2.6.0",
 		"polka": "next",
-		"prismic-javascript": "^3.0.1",
 		"sirv": "^1.0.1"
 	},
 	"devDependencies": {
