--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,9 +16,8 @@ jobs:
               uses: actions/setup-node@v1
               with:
                   node-version: ${{ matrix.node-version }}
-            - run: yarn global add pm2
             - run: yarn
-            - run: yarn run build
+            - run: yarn build
             - run: /home/renai/.yarn/bin/pm2 reload ecosystem.config.js
             - run: /home/renai/.yarn/bin/pm2 save
               env:
