--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
 
         steps:
             - uses: actions/checkout@v2
-            - name: Install Dependencies and Build Whistler
+            - name: Install Dependencies and Build Majestic
               run: |
                   yarn
                   yarn build
