--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,12 +10,11 @@ jobs:
 
         steps:
             - uses: actions/checkout@v2
-            - name: Install Dependencies and Build Majestic
-              run: |
-                  yarn
-                  yarn build
+            - name: Stop older Docker service
+              run: docker stop majestic
 
-            - name: Reload the PM2 Ecosystem
-              run: |
-                  pm2 reload ecosystem.config.js
-                  pm2 save
+            - name: Build new Docker image
+              run: docker build -t mirac/majestic .
+
+            - name: Run the new Docker container
+              run: docker run -d -p 8035:3000 --name majestic -e "PORT=3000" --restart unless-stopped mirac/majestic
