[meta] switch to typescript and setup workspace config + yarn pnp

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-.yarn/*
-!.yarn/releases
-!.yarn/plugins
-!.yarn/sdks
-!.yarn/versions
-.pnp.*
-src/node_modules/@sapper/
+/.yarn/*
+!/.yarn/releases
+!/.yarn/plugins
+!/.yarn/sdks
+/.pnp.*
+
+src/node_modules/
 __sapper__/
