--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
-  "recommendations": [
-    "esbenp.prettier-vscode"
-  ]
+	"recommendations": [
+		"svelte.svelte-vscode",
+		"arcanis.vscode-zipfs"
+	]
 }
