--- a/package.json
+++ b/package.json
@@ -1,47 +1,44 @@
 {
 	"name": "majestic",
-	"description": "Majestic | Successor of Mellow",
-	"license": "MIT",
-	"contributors": [
-		{
-			"name": "Renaitare",
-			"email": "support@renai.me",
-			"url": "https://renai.me"
-		},
-		{
-			"name": "Mirac",
-			"email": "ozd.mirac@gmail.com",
-			"url": "https://madebymirac.com"
-		}
-	],
 	"scripts": {
 		"dev": "sapper dev",
-		"build": "sapper build",
-		"start": "node __sapper__/build"
+		"build": "sapper build --legacy",
+		"export": "sapper export --legacy",
+		"start": "node __sapper__/build",
+		"validate": "svelte-check --ignore src/node_modules/@sapper"
 	},
 	"dependencies": {
 		"compression": "^1.7.4",
-		"node-fetch": "^2.6.0",
-		"polka": "next",
-		"sirv": "^1.0.1"
+		"node-fetch": "^2.6.1",
+		"polka": "^0.5.2",
+		"sirv": "^1.0.11"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.10.4",
+		"@babel/core": "^7.13.8",
 		"@babel/plugin-syntax-dynamic-import": "^7.8.3",
-		"@babel/plugin-transform-runtime": "^7.10.4",
-		"@babel/preset-env": "^7.10.4",
-		"@babel/runtime": "^7.10.4",
-		"@rollup/plugin-alias": "^3.1.1",
-		"@rollup/plugin-babel": "^5.0.4",
-		"@rollup/plugin-commonjs": "^13.0.0",
-		"@rollup/plugin-node-resolve": "^8.1.0",
-		"@rollup/plugin-replace": "^2.3.3",
-		"npm-run-all": "^4.1.5",
-		"prettier": "^2.0.5",
-		"rollup": "^2.18.2",
-		"rollup-plugin-svelte": "^5.2.3",
-		"rollup-plugin-terser": "^6.1.0",
-		"sapper": "^0.27.16",
-		"svelte": "^3.23.2"
+		"@babel/plugin-transform-runtime": "^7.13.9",
+		"@babel/preset-env": "^7.13.9",
+		"@babel/runtime": "^7.13.9",
+		"@rollup/plugin-alias": "^3.1.2",
+		"@rollup/plugin-babel": "^5.3.0",
+		"@rollup/plugin-commonjs": "^17.1.0",
+		"@rollup/plugin-node-resolve": "^11.2.0",
+		"@rollup/plugin-replace": "^2.4.1",
+		"@rollup/plugin-typescript": "^8.2.0",
+		"@rollup/plugin-url": "^6.0.0",
+		"@tsconfig/svelte": "^1.0.10",
+		"@types/compression": "^1.7.0",
+		"@types/node": "^14.14.32",
+		"@types/node-fetch": "^2.5.8",
+		"@types/polka": "^0.5.2",
+		"rollup": "^2.40.0",
+		"rollup-plugin-svelte": "^7.1.0",
+		"rollup-plugin-terser": "^7.0.2",
+		"sapper": "^0.29.1",
+		"svelte": "^3.35.0",
+		"svelte-check": "^1.2.3",
+		"svelte-preprocess": "^4.6.9",
+		"tslib": "^2.1.0",
+		"typescript": "^4.2.3"
 	}
 }
