--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 		"dev": "sapper dev",
 		"build": "sapper build --legacy",
 		"export": "sapper export --legacy",
-		"start": "node __sapper__/build",
+		"start": "yarn node __sapper__/build",
 		"validate": "svelte-check --ignore src/node_modules/@sapper"
 	},
 	"dependencies": {
