--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"compression": "^1.7.4",
 		"node-fetch": "^2.6.1",
 		"polka": "^0.5.2",
-		"sirv": "^1.0.11"
+		"sirv": "^1.0.11",
+		"ua-parser-js": "^0.7.24"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.13.8",
@@ -31,6 +32,7 @@
 		"@types/node": "^14.14.32",
 		"@types/node-fetch": "^2.5.8",
 		"@types/polka": "^0.5.2",
+		"@types/ua-parser-js": "^0.7.35",
 		"rollup": "^2.40.0",
 		"rollup-plugin-svelte": "^7.1.0",
 		"rollup-plugin-terser": "^7.0.2",
